tests/lang/compile_fail/specialized_impl_body_mismatch.expo
struct Box<T>
  value: T
end

impl Box<Int>
  fn squared(self) -> String
    self.value * self.value
  end
end

fn main
  b: Box<Int> = Box{value: 3}
  b.squared().print()
end
